# sdk

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  BUILD  Foobar.cc  Foobar.h  Foobar.ino  HelloWorld.cc  HelloWorld.h  Index.cc  Index.h  LICENSE  Makefile  Person.cc  Person.h  README.md  WORKSPACE  ardunio.generated.cc  ardunio.ino  bazel-bin  bazel-out  bazel-sdk  bazel-testlogs  glide.yaml  go.mod  go.sum  magefile.go  main.go  strict.sh  test.cc
cmd/strict/: BUILD.bazel  build_command.go  cobra.go  command_ast.go  command_build.go  command_format.go  command_init.go  command_run.go  command_tokenize.go  command_tree.go  command_version.go  common.go  compile.go  filename.go  files.go  format.go  format_command.go  main.go  parse.go  run.go
compilation/tree/: BUILD.bazel  for_each_loop_statement.go  list_type_name.go
libstrict/src/: CMakeLists.txt
libstrict/src/strict/: all.hh  input.cc  input.hh  log.cc  log.hh  strict.cc  strict.hh
native/src/: CMakeLists.txt
native/src/strict/: native_call.h  testing.h
native/src/strict/collection/: vector.h
native/src/strict/lang/: strict.cc  testing.cc
pkg/compiler/: BUILD.bazel  compilation.go  compilation_test.go  compile.go  source.go
pkg/compiler/analysis/: BUILD.bazel  analysis.go  generic_resolution.go  import_pass.go  importing.go  name_resolution.go  name_resolution_test.go  name_validation.go  parent_assignment.go  passes.go  scope_creation.go  scope_resolution.go  source_importing.go  symbol_entering.go  type_resolution.go
pkg/compiler/analysis/entering/: generic_resolution.go  implicit_factory.go  parent_assignment.go  run.go  scope_creation.go  symbol_entering.go
pkg/compiler/analysis/semantic/: name_resolution.go  name_resolution_test.go  name_validation.go  run.go
pkg/compiler/backend/: BUILD.bazel  assertion_message.go  backend.go  class_definition.go  expression.go  extension.go  generation.go  import.go  method_call.go  method_declaration.go  method_definition.go  statement.go  translation_unit.go  types.go  util.go  visitor.go
pkg/compiler/backend/arduino/: BUILD.bazel  backend.go  generation.go
pkg/compiler/backend/cpp/: BUILD.bazel  app_framework.go  assertion_message.go  backend.go  buffer.go  class_definition.go  expression.go  extension.go  generation.go  generation_test.go  header_class_definition.go  header_file_generation.go  import.go  method_call.go  method_declaration.go  method_definition.go  source_file_generation.go  statement.go  test_file_generation.go  translation_unit.go  types.go  util.go  visitor.go
pkg/compiler/backend/headerfile/: BUILD.bazel  class_definition.go  generation.go
pkg/compiler/backend/ilasm/: BUILD.bazel  backend.go  builder.go  expression.go  statement.go  storage.go  typing.go
pkg/compiler/backend/silk/: BUILD.bazel  backend.go  generation.go  item.go  method_context.go  types.go
pkg/compiler/backend/sourcefile/: BUILD.bazel  generation.go
pkg/compiler/backend/testfile/: BUILD.bazel  testfile.go
pkg/compiler/code/: BUILD.bazel  analysis.go  archive.go  attribute.go  builtins.go  inference.go  namespace.go  naming.go  parent_assignment.go  scope_resolution.go  typed_member.go  types.go
pkg/compiler/diagnostic/: BUILD.bazel  color.go  diagnostics.go  entry.go  kind.go  recorder.go  rich_error.go  stage.go
pkg/compiler/grammar/lexical/: BUILD.bazel  errors.go  escaped_chars.go  identifier.go  identifier_test.go  keyword.go  keyword_test.go  number.go  number_test.go  operator.go  operator_table.go  operator_test.go  recording_source_reader.go  scanning.go  scanning_test.go  scanning_util.go  text.go  text_test.go
pkg/compiler/grammar/syntax/: BUILD.bazel  binary_expression.go  declaration.go  declaration_test.go  errors.go  expression.go  expression_test.go  factory.go  methods.go  methods_test.go  parse.go  parsing.go  parsing_error.go  parsing_test.go  parsing_util.go  statement.go  statement_control.go  statement_import.go  statement_instruction.go  statement_test.go  structure_stack.go  types.go  types_test.go
pkg/compiler/grammar/token/: BUILD.bazel  end_of_statement_token.go  keyword_token.go  keywords.go  operators.go  position.go  position_test.go  reader.go  valued_token.go
pkg/compiler/grammar/tree/: BUILD.bazel  assert_statement.go  assert_statement_test.go  assign_statement.go  assign_statement_test.go  binary_expression.go  binary_expression_test.go  block_statement.go  block_statement_test.go  break_statement.go  break_statement_test.go  call_argument.go  call_argument_test.go  call_expression.go  call_expression_test.go  class_declaration.go  class_declaration_test.go  (+78 more)
pkg/compiler/input/: BUILD.bazel  char.go  char_test.go  position.go  reader.go  region_test.go  stream_reader.go  string_reader.go  string_reader_test.go
pkg/compiler/isolate/: BUILD.bazel  factory.go  isolate.go  thread_locals.go
pkg/compiler/lowering/: BUILD.bazel  computation_call.go  let_binding.go  passes.go
pkg/compiler/pass/: BUILD.bazel  pass.go  pass_execution.go  pass_execution_test.go
pkg/compiler/report/: diagnosticRenderer.go  diagnostic_renderer.go  output.go  renderer.go  report.go  serialization.go
pkg/compiler/sad/: decoding.go  doc.go  encoding.go  encoding_test.go  enter.go  generation.go  generation_test.go  tree.go
pkg/compiler/scope/: BUILD.bazel  builtin.go  cache.go  empty_scope.go  import_scope.go  import_scope_test.go  local_scope.go  local_scope_test.go  log.go  names.go  names_test.go  namespace_scope.go  outer_scope.go  scope.go  scope_with_parent.go  symbol.go  symbol_test.go
pkg/compiler/typing/: BUILD.bazel  class.go  concrete_type.go  generic_type.go  list_type.go  optional_type.go  type.go
pkg/langserver/session/: BUILD.bazel  ast_cache.go
pkg/silk/: BUILD.bazel  access.go  block.go  block_test.go  class.go  class_definition.go  field.go  file.go  instruction.go  instruction_test.go  method.go  operations.go  types.go  visitor.go
pkg/silk/instruction/: BUILD.bazel  factory.go  instruction.go  operand.go  operation.go
pkg/silk/symbol/: BUILD.bazel  symbols.go  table.go
(+647 files in other folders)
