load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "for_each_loop_statement.go",
        "list_type_name.go",
    ],
    importpath = "gitlab.com/strict-lang/sdk/compilation/tree",
    visibility = ["//visibility:public"],
    deps = ["@com_gitlab_strict_lang_sdk//compilation/input:go_default_library"],
)
