set(LIBSTRICT_PUBLIC_INCLUDE_DIRECTORIES .)
file(GLOB_RECURSE LIBSTRICT_SOURCE_FILES "strict/*.hh" "strict/*.cc")

add_library(${PROJECT_NAME} STATIC ${LIBSTRICT_SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${LIBSTRICT_PUBLIC_INCLUDE_DIRECTORIES})

install(FILES ${LIBSTRICT_SOURCE_FILES} DESTINATION include/strict)