set(LIBSTRICT_NAME strict)
set(LIBSTRICT_PUBLIC_INCLUDE_DIRECTORIES .)
set(LIBSTRICT_INCLUDE_PATH include/${LIBSTRICT_NAME})


set(LIBSTRICT_SOURCE_FILES "strict/strict.cc")
set(LIBSTRICT_HEADER_FILES "strict/strict.hh")

add_library(${LIBSTRICT_NAME} ${LIBSTRICT_SOURCE_FILES})

target_include_directories(${LIBSTRICT_NAME} PUBLIC ${LIBSTRICT_PUBLIC_INCLUDE_DIRECTORIES})

install(TARGETS ${LIBSTRICT_NAME} DESTINATION "lib")
install(FILES ${LIBSTRICT_HEADER_FILES} DESTINATION ${LIBSTRICT_INCLUDE_PATH})