load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "access.go",
        "block.go",
        "class.go",
        "field.go",
        "file.go",
        "instruction.go",
        "method.go",
        "operations.go",
        "types.go",
        "visitor.go",
    ],
    importpath = "strict.dev/sdk/pkg/silk",
    visibility = ["//visibility:public"],
    deps = ["//pkg/silk/symbol:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "block_test.go",
        "instruction_test.go",
    ],
    embed = [":go_default_library"],
)
