load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["backend.go"],
    importpath = "strict.dev/sdk/pkg/compiler/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compiler/diagnostic:go_default_library",
        "//pkg/compiler/grammar/tree:go_default_library",
        "//pkg/compiler/isolate:go_default_library",
    ],
)
