load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "pass.go",
        "pass_execution.go",
    ],
    importpath = "gitlab.com/strict-lang/sdk/pkg/compiler/pass",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compiler/diagnostic:go_default_library",
        "//pkg/compiler/grammar/tree:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pass_execution_test.go"],
    embed = [":go_default_library"],
)
