load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ast_cache.go",
        "session.go",
    ],
    importpath = "gitlab.com/strict-lang/sdk/pkg/langserver/session",
    visibility = ["//visibility:public"],
    deps = ["//pkg/compiler/grammar/tree:go_default_library"],
)
