load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "factory.go",
        "instruction.go",
        "operand.go",
        "operation.go",
    ],
    importpath = "gitlab.com/strict-lang/sdk/pkg/silk/instruction",
    visibility = ["//visibility:public"],
)
