load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "backend.go",
        "generation.go",
        "item.go",
        "method_context.go",
        "types.go",
    ],
    importpath = "strict.dev/sdk/pkg/compiler/backend/silk",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compiler/backend:go_default_library",
        "//pkg/compiler/typing:go_default_library",
        "//pkg/silk:go_default_library",
    ],
)
