load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testfile.go"],
    importpath = "strict.dev/sdk/pkg/compiler/backend/testfile",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compiler/backend:go_default_library",
        "//pkg/compiler/grammar/tree:go_default_library",
    ],
)
