load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "expression.go",
        "factory.go",
        "methods.go",
        "parse.go",
        "parsing.go",
        "statement.go",
        "structure_stack.go",
        "types.go",
    ],
    importpath = "strict.dev/sdk/pkg/compiler/grammar/syntax",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compiler/diagnostic:go_default_library",
        "//pkg/compiler/grammar/lexical:go_default_library",
        "//pkg/compiler/grammar/token:go_default_library",
        "//pkg/compiler/grammar/tree:go_default_library",
        "//pkg/compiler/input:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "expression_test.go",
        "methods_test.go",
        "parsing_test.go",
        "statement_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/compiler/diagnostic:go_default_library",
        "//pkg/compiler/grammar/lexical:go_default_library",
        "//pkg/compiler/grammar/token:go_default_library",
        "//pkg/compiler/grammar/tree:go_default_library",
        "//pkg/compiler/grammar/tree/pretty:go_default_library",
    ],
)
