load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "end_of_file_token.go",
        "end_of_statement_token.go",
        "invalid_token.go",
        "keyword_token.go",
        "keywords.go",
        "operator_token.go",
        "operators.go",
        "position.go",
        "queue.go",
        "reader.go",
        "token.go",
        "valued_token.go",
    ],
    importpath = "gitlab.com/strict-lang/sdk/pkg/compiler/grammar/token",
    visibility = ["//visibility:public"],
    deps = ["//pkg/compiler/input:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["position_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/compiler/input:go_default_library"],
)
