load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "builder.go",
        "linemap.go",
    ],
    importpath = "gitlab.com/strict-lang/sdk/pkg/compiler/input/linemap",
    visibility = ["//visibility:public"],
    deps = ["//pkg/compiler/input:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["linemap_test.go"],
    embed = [":go_default_library"],
)
